# 2da-table-viewer

./: .gitignore  CLAUDE.md  Cargo.toml  README.txt
crates/da-cli/: Cargo.toml
crates/da-cli/src/: main.rs
crates/da-core/: Cargo.toml
crates/da-core/src/: error.rs  history.rs  lib.rs  merger.rs  parser.rs  patch.rs  scanner.rs  table.rs
crates/da-ffi/: Cargo.toml
crates/da-ffi/src/: lib.rs
ui-qt/: CMakeLists.txt
ui-qt/include/: da_ffi.h
ui-qt/src/: DetailsPanel.cpp  DetailsPanel.h  FamilyPanel.cpp  FamilyPanel.h  FfiWrapper.cpp  FfiWrapper.h  MainWindow.cpp  MainWindow.h  TablePanel.cpp  TablePanel.h  main.cpp
