[package]
name = "da-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI tool for viewing and merging Dragon Age 2DA tables"

[[bin]]
name = "da-cli"
path = "src/main.rs"

[dependencies]
da-core = { path = "../da-core" }
clap.workspace = true
serde_json.workspace = true
